feat: initial example with exporting stacks

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: "18"
       - name: Install dependencies
         run: npm ci
       - name: release
@@ -65,7 +65,7 @@ jobs:
     steps:
       - uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: "18"
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
@@ -95,7 +95,7 @@ jobs:
     steps:
       - uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: "18"
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
