--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "unbump": "npx projen unbump",
     "upgrade": "npx projen upgrade",
     "watch": "npx projen watch",
-    "projen": "npx projen"
+    "projen": "npx projen",
+    "prepare": "husky"
   },
   "author": {
     "name": "DataChefHQ",
@@ -45,6 +46,7 @@
     "eslint": "^8",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-junit": "^15",
     "jsii": "~5.3.0",
