--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -99,6 +99,14 @@
         }
       ]
     },
+    "create-cdk": {
+      "name": "create-cdk",
+      "steps": [
+        {
+          "exec": "npx ts-node --prefer-ts-exts scripts/create-cdk-config-rules-and-conformance-packs/index.ts"
+        }
+      ]
+    },
     "default": {
       "name": "default",
       "description": "Synthesize project files",
@@ -283,13 +291,13 @@
       },
       "steps": [
         {
-          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --dep=dev,peer,prod,optional --filter=@types/jest,eslint-import-resolver-typescript,eslint-plugin-import,husky,jest,jsii-diff,jsii-docgen,jsii-pacmak,jsii-rosetta,jsii,projen,ts-jest,ts-node,typescript,@aws-sdk/client-cost-explorer,@aws-sdk/client-sts,@aws-sdk/credential-providers,execa,table"
+          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --dep=dev,peer,prod,optional --filter=@types/jest,@types/js-yaml,eslint-import-resolver-typescript,eslint-plugin-import,husky,jest,js-yaml,jsii-diff,jsii-docgen,jsii-pacmak,jsii-rosetta,jsii,projen,ts-jest,ts-node,typescript,@aws-sdk/client-cost-explorer,@aws-sdk/client-sts,@aws-sdk/credential-providers,execa,table"
         },
         {
           "exec": "npm install"
         },
         {
-          "exec": "npm update @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser eslint-import-resolver-typescript eslint-plugin-import eslint husky jest jest-junit jsii-diff jsii-docgen jsii-pacmak jsii-rosetta jsii projen standard-version ts-jest ts-node typescript @aws-sdk/client-cost-explorer @aws-sdk/client-sts @aws-sdk/credential-providers execa table aws-cdk-lib constructs"
+          "exec": "npm update @types/jest @types/js-yaml @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser eslint-import-resolver-typescript eslint-plugin-import eslint husky jest jest-junit js-yaml jsii-diff jsii-docgen jsii-pacmak jsii-rosetta jsii projen standard-version ts-jest ts-node typescript @aws-sdk/client-cost-explorer @aws-sdk/client-sts @aws-sdk/credential-providers execa table aws-cdk-lib constructs"
         },
         {
           "exec": "npx projen"
