test github publish + other github oidc code

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recipes_data-landing-zone_data-landing-zone",
+  "name": "@DataChefHQ/recipes_data-landing-zone_data-landing-zone",
   "repository": {
     "type": "git",
     "url": "https://github.com/DataChefHQ/recipes_data-landing-zone_data-landing-zone.git"
@@ -87,6 +87,9 @@
   },
   "main": "lib/index.js",
   "license": "Apache-2.0",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "version": "0.0.0",
   "jest": {
     "moduleFileExtensions": [
