--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^18",
-    "@typescript-eslint/eslint-plugin": "^6",
-    "@typescript-eslint/parser": "^6",
+    "@typescript-eslint/eslint-plugin": "^7",
+    "@typescript-eslint/parser": "^7",
     "aws-cdk-lib": "2.133.0",
     "constructs": "10.0.5",
     "eslint": "^8",
@@ -50,13 +50,13 @@
     "jest": "^29.7.0",
     "jest-junit": "^15",
     "jsii": "~5.3.0",
-    "jsii-diff": "^1.95.0",
-    "jsii-docgen": "^10.3.24",
-    "jsii-pacmak": "^1.95.0",
+    "jsii-diff": "^1.101.0",
+    "jsii-docgen": "^10.4.17",
+    "jsii-pacmak": "^1.101.0",
     "jsii-rosetta": "~5.3.0",
-    "projen": "^0.80.12",
+    "projen": "^0.82.8",
     "standard-version": "^9",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.3.0"
   },
@@ -65,9 +65,9 @@
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@aws-sdk/client-cost-explorer": "^3.552.0",
-    "@aws-sdk/client-sts": "^3.540.0",
-    "@aws-sdk/credential-providers": "^3.540.0",
+    "@aws-sdk/client-cost-explorer": "^3.600.0",
+    "@aws-sdk/client-sts": "^3.606.0",
+    "@aws-sdk/credential-providers": "^3.600.0",
     "execa": "5.1.1",
     "table": "^6.8.2"
   },
@@ -82,8 +82,8 @@
     "cdk"
   ],
   "engines": {
-    "node": "~18.*",
-    "npm": "~9.*"
+    "node": "~20.*",
+    "npm": "~10.*"
   },
   "main": "lib/index.js",
   "license": "Apache-2.0",
@@ -92,6 +92,7 @@
   },
   "version": "0.0.0",
   "jest": {
+    "coverageProvider": "v8",
     "moduleFileExtensions": [
       "ts",
       "tsx",
@@ -104,7 +105,7 @@
     ],
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.ts?(x)",
-      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)"
+      "<rootDir>/@(test|src)/**/*(*.)@(spec|test).ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
