--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@DataChefHQ/recipes_data-landing-zone_data-landing-zone",
+  "name": "recipes_data-landing-zone_data-landing-zone",
   "repository": {
     "type": "git",
     "url": "https://github.com/DataChefHQ/recipes_data-landing-zone_data-landing-zone.git"
@@ -88,7 +88,8 @@
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "registry": "https://npm.pkg.github.com/",
+    "access": "public"
   },
   "version": "0.0.0",
   "jest": {
