--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "eslint": "^8",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
-    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-junit": "^15",
     "jsii": "~5.3.0",
@@ -68,6 +67,7 @@
     "@aws-sdk/client-sts": "^3.606.0",
     "@aws-sdk/credential-providers": "^3.600.0",
     "execa": "5.1.1",
+    "husky": "^9.0.11",
     "table": "^6.8.2"
   },
   "bundledDependencies": [
@@ -75,6 +75,7 @@
     "@aws-sdk/client-sts",
     "@aws-sdk/credential-providers",
     "execa",
+    "husky",
     "table"
   ],
   "keywords": [
