prepare and CI changes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,6 +111,8 @@ jobs:
         run: cd .repo && npx projen package:js
       - name: Collect js Artifact
         run: mv .repo/dist dist
+    env:
+      CI: "true"
   package-python:
     needs: build
     runs-on: ubuntu-latest
