--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "npx projen build",
     "bump": "npx projen bump",
+    "clear-lib-and-dist": "npx projen clear-lib-and-dist",
     "clobber": "npx projen clobber",
     "compat": "npx projen compat",
     "compile": "npx projen compile",
@@ -45,6 +46,7 @@
     "eslint": "^8",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-junit": "^15",
     "jsii": "~5.3.0",
@@ -67,7 +69,6 @@
     "@aws-sdk/client-sts": "^3.606.0",
     "@aws-sdk/credential-providers": "^3.600.0",
     "execa": "5.1.1",
-    "husky": "^9.0.11",
     "table": "^6.8.2"
   },
   "bundledDependencies": [
@@ -75,7 +76,6 @@
     "@aws-sdk/client-sts",
     "@aws-sdk/credential-providers",
     "execa",
-    "husky",
     "table"
   ],
   "keywords": [
