feat: add non overlapping VPC CIDRs #dlz-21

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -201,9 +201,7 @@
     "dot-notation": [
       "error"
     ],
-    "no-bitwise": [
-      "error"
-    ],
+    "no-bitwise": "off",
     "@typescript-eslint/member-ordering": [
       "error",
       {
