--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "build": "npx projen build",
     "bump": "npx projen bump",
+    "bundle": "npx projen bundle",
+    "bundle:constructs/identity-store-user/lambda": "npx projen bundle:constructs/identity-store-user/lambda",
+    "bundle:constructs/identity-store-user/lambda:watch": "npx projen bundle:constructs/identity-store-user/lambda:watch",
     "clear-lib-and-dist": "npx projen clear-lib-and-dist",
     "clobber": "npx projen clobber",
     "compat": "npx projen compat",
@@ -37,6 +40,8 @@
     "organization": false
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.145",
+    "@types/aws-sdk": "^0.0.42",
     "@types/jest": "^29.5.12",
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^7",
@@ -44,6 +49,7 @@
     "aws-cdk-lib": "2.133.0",
     "commit-and-tag-version": "^12",
     "constructs": "10.0.5",
+    "esbuild": "^0.24.0",
     "eslint": "^8",
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import": "^2.30.0",
@@ -66,15 +72,21 @@
   },
   "dependencies": {
     "@aws-sdk/client-cost-explorer": "^3.650.0",
+    "@aws-sdk/client-identitystore": "^3.654.0",
+    "@aws-sdk/client-sso-admin": "^3.654.0",
     "@aws-sdk/client-sts": "^3.650.0",
     "@aws-sdk/credential-providers": "^3.650.0",
+    "aws-lambda": "^1.0.7",
     "execa": "5.1.1",
     "table": "^6.8.2"
   },
   "bundledDependencies": [
     "@aws-sdk/client-cost-explorer",
+    "@aws-sdk/client-identitystore",
+    "@aws-sdk/client-sso-admin",
     "@aws-sdk/client-sts",
     "@aws-sdk/credential-providers",
+    "aws-lambda",
     "execa",
     "table"
   ],
