--- a/package.json
+++ b/package.json
@@ -73,8 +73,9 @@
   "dependencies": {
     "@aws-sdk/client-cost-explorer": "^3.650.0",
     "@aws-sdk/client-identitystore": "^3.654.0",
+    "@aws-sdk/client-ssm": "^3.679.0",
     "@aws-sdk/client-sso-admin": "^3.654.0",
-    "@aws-sdk/client-sts": "^3.650.0",
+    "@aws-sdk/client-sts": "^3.679.0",
     "@aws-sdk/credential-providers": "^3.650.0",
     "aws-lambda": "^1.0.7",
     "execa": "5.1.1",
@@ -83,6 +84,7 @@
   "bundledDependencies": [
     "@aws-sdk/client-cost-explorer",
     "@aws-sdk/client-identitystore",
+    "@aws-sdk/client-ssm",
     "@aws-sdk/client-sso-admin",
     "@aws-sdk/client-sts",
     "@aws-sdk/credential-providers",
