--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@DataChefHQ/data-landing-zone",
+  "description": "AWS CDK Data Landing Zone construct",
   "repository": {
     "type": "git",
     "url": "https://github.com/DataChefHQ/recipes_data-landing-zone_data-landing-zone.git"
@@ -68,6 +69,7 @@
   },
   "peerDependencies": {
     "aws-cdk-lib": "^2.133.0",
+    "cdk-express-pipeline": "^1.0.2",
     "constructs": "^10.0.5"
   },
   "dependencies": {
@@ -76,7 +78,7 @@
     "@aws-sdk/client-sso-admin": "^3.654.0",
     "@aws-sdk/client-sts": "^3.679.0",
     "@aws-sdk/credential-providers": "^3.650.0",
-    "aws-lambda": "^1.0.7",
+    "cdk-express-pipeline": "^1.0.2",
     "execa": "5.1.1",
     "table": "^6.8.2"
   },
@@ -86,7 +88,6 @@
     "@aws-sdk/client-sso-admin",
     "@aws-sdk/client-sts",
     "@aws-sdk/credential-providers",
-    "aws-lambda",
     "execa",
     "table"
   ],
