--- a/package.json
+++ b/package.json
@@ -41,31 +41,32 @@
     "organization": false
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin": "^2",
     "@types/aws-lambda": "^8.10.145",
     "@types/aws-sdk": "^0.0.42",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
     "@types/node": "^18",
-    "@typescript-eslint/eslint-plugin": "^7",
-    "@typescript-eslint/parser": "^7",
+    "@typescript-eslint/eslint-plugin": "^8",
+    "@typescript-eslint/parser": "^8",
     "aws-cdk-lib": "2.133.0",
     "commit-and-tag-version": "^12",
     "constructs": "10.0.5",
     "esbuild": "^0.24.0",
-    "eslint": "^8",
+    "eslint": "^9",
     "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-import": "^2.31.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-junit": "^15",
-    "jsii": "~5.3.0",
-    "jsii-diff": "^1.103.1",
+    "jsii": "~5.5.0",
+    "jsii-diff": "^1.104.0",
     "jsii-docgen": "^10.5.0",
-    "jsii-pacmak": "^1.103.1",
-    "jsii-rosetta": "~5.3.0",
-    "projen": "^0.87.2",
+    "jsii-pacmak": "^1.104.0",
+    "jsii-rosetta": "~5.5.0",
+    "projen": "^0.90.2",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "~5.3.0"
+    "typescript": "~5.5.0"
   },
   "peerDependencies": {
     "aws-cdk-lib": "^2.133.0",
@@ -73,11 +74,11 @@
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@aws-sdk/client-cost-explorer": "^3.650.0",
-    "@aws-sdk/client-identitystore": "^3.654.0",
-    "@aws-sdk/client-sso-admin": "^3.654.0",
-    "@aws-sdk/client-sts": "^3.679.0",
-    "@aws-sdk/credential-providers": "^3.650.0",
+    "@aws-sdk/client-cost-explorer": "^3.691.0",
+    "@aws-sdk/client-identitystore": "^3.691.0",
+    "@aws-sdk/client-sso-admin": "^3.691.0",
+    "@aws-sdk/client-sts": "^3.691.0",
+    "@aws-sdk/credential-providers": "^3.691.0",
     "cdk-express-pipeline": "^1.0.2",
     "execa": "5.1.1",
     "table": "^6.8.2"
