--- a/docs/package.json
+++ b/docs/package.json
@@ -13,6 +13,8 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/starlight": "^0.29.2",
     "astro": "^4.16.10",
+    "playwright": "^1.49.0",
+    "rehype-mermaid": "^3.0.0",
     "sharp": "^0.32.5",
     "typescript": "^5.6.3"
   }
