--- a/docs/package.json
+++ b/docs/package.json
@@ -3,7 +3,10 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev:development": "astro dev",
+    "dev:developmentd:host": "astro dev --host",
+    "build:development": "astro check && astro build --mode development",
+    "build:production": "astro check && astro build --mode production",
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
@@ -16,6 +19,7 @@
     "playwright": "^1.49.0",
     "rehype-mermaid": "^3.0.0",
     "sharp": "^0.32.5",
+    "starlight-image-zoom": "^0.9.0",
     "typescript": "^5.6.3"
   }
 }
