--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "constructs": "^10.0.5"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudformation": "^3.726.0",
     "@aws-sdk/client-cost-explorer": "^3.691.0",
     "@aws-sdk/client-iam": "^3.723.0",
     "@aws-sdk/client-identitystore": "^3.691.0",
@@ -87,6 +88,7 @@
     "table": "^6.8.2"
   },
   "bundledDependencies": [
+    "@aws-sdk/client-cloudformation",
     "@aws-sdk/client-cost-explorer",
     "@aws-sdk/client-iam",
     "@aws-sdk/client-identitystore",
