--- a/package.json
+++ b/package.json
@@ -83,8 +83,10 @@
     "@aws-sdk/client-sso-admin": "^3.691.0",
     "@aws-sdk/client-sts": "^3.691.0",
     "@aws-sdk/credential-providers": "^3.691.0",
+    "@types/js-yaml": "^4.0.9",
     "cdk-express-pipeline": "^1.0.2",
     "execa": "5.1.1",
+    "js-yaml": "^4.1.0",
     "table": "^6.8.2"
   },
   "bundledDependencies": [
@@ -95,7 +97,9 @@
     "@aws-sdk/client-sso-admin",
     "@aws-sdk/client-sts",
     "@aws-sdk/credential-providers",
+    "@types/js-yaml",
     "execa",
+    "js-yaml",
     "table"
   ],
   "keywords": [
