--- a/package.json
+++ b/package.json
@@ -76,24 +76,30 @@
     "constructs": "^10.0.5"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudformation": "^3.726.0",
     "@aws-sdk/client-cost-explorer": "^3.691.0",
     "@aws-sdk/client-iam": "^3.723.0",
     "@aws-sdk/client-identitystore": "^3.691.0",
     "@aws-sdk/client-sso-admin": "^3.691.0",
     "@aws-sdk/client-sts": "^3.691.0",
     "@aws-sdk/credential-providers": "^3.691.0",
+    "@types/js-yaml": "^4.0.9",
     "cdk-express-pipeline": "^1.0.2",
     "execa": "5.1.1",
+    "js-yaml": "^4.1.0",
     "table": "^6.8.2"
   },
   "bundledDependencies": [
+    "@aws-sdk/client-cloudformation",
     "@aws-sdk/client-cost-explorer",
     "@aws-sdk/client-iam",
     "@aws-sdk/client-identitystore",
     "@aws-sdk/client-sso-admin",
     "@aws-sdk/client-sts",
     "@aws-sdk/credential-providers",
+    "@types/js-yaml",
     "execa",
+    "js-yaml",
     "table"
   ],
   "keywords": [
